DEV-Microk8s/homarr_deployment/homarr-ingress.yaml
# Ingress yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-ingress
  namespace: homarr # MUST match the namespace where your app's service lives
  annotations:
    # Specify the cert-manager resource
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/session-cookie-name: "homarr_affinity"
    traefik.ingress.kubernetes.io/session-cookie-maxage: "30"
    traefik.ingress.kubernetes.io/session-cookie-samesite: "Lax"
    traefik.ingress.kubernetes.io/session-cookie-secure: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - homarr.dev.k8s.powersstudios.net # The URL you want to use
    # cert-manager will automatically create this Secret and store the certificate here
    secretName: homarr-tls-secret 
  rules:
  - host: homarr.dev.k8s.powersstudios.net # The URL you want to use
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr-clusterip-svc # The exact name of your app's Service
            port:
              number: 7575 # The internal port your app uses
